// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Popover Dev 1`] = `
<div
  style={
    Object {
      "margin": "220px",
    }
  }
>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <button
          aria-controls="fd-mocked-short-id"
          aria-expanded={false}
          aria-haspopup={true}
          className="fd-button fd-button--transparent"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          type="button"
        >
          <i
            aria-hidden={true}
            className="sap-icon--navigation-up-arrow"
            role="img"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Popover Disable Edge Detection 1`] = `
Array [
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <button
          aria-controls="fd-mocked-short-id"
          aria-expanded={false}
          aria-haspopup={true}
          className="fd-button fd-button--transparent"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          type="button"
        >
          <i
            aria-hidden={true}
            className="sap-icon--navigation-up-arrow"
            role="img"
          />
        </button>
      </div>
    </div>
  </div>,
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <button
          aria-controls="fd-mocked-short-id"
          aria-expanded={false}
          aria-haspopup={true}
          className="fd-button fd-button--transparent"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          type="button"
        >
          <i
            aria-hidden={true}
            className="sap-icon--navigation-down-arrow"
            role="img"
          />
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Component API/Popover No Arrow 1`] = `
Array [
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <i
          aria-controls="fd-mocked-short-id"
          aria-expanded={false}
          aria-haspopup={true}
          className="sap-icon--cart"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="img"
          style={
            Object {
              "fontSize": "1.5rem",
            }
          }
          tabIndex={0}
        />
      </div>
    </div>
  </div>,
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <span
          aria-controls="fd-mocked-short-id"
          aria-expanded={false}
          aria-haspopup={true}
          className="fd-avatar fd-avatar--m fd-avatar--thumbnail fd-avatar--circle"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          style={
            Object {
              "backgroundImage": "url(./assets/nature.jpg)",
            }
          }
          tabIndex={0}
        />
      </div>
    </div>
  </div>,
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <span
          aria-controls="fd-mocked-short-id"
          aria-expanded={false}
          aria-haspopup={true}
          className="fd-avatar fd-avatar--m fd-avatar--accent-color-6"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <i
            aria-hidden={true}
            className="sap-icon--money-bills fd-avatar__icon"
            role="img"
          />
        </span>
      </div>
    </div>
  </div>,
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <i
          aria-controls="fd-mocked-short-id"
          aria-expanded={false}
          aria-haspopup={true}
          className="sap-icon--menu2"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="img"
          style={
            Object {
              "fontSize": "1.5rem",
            }
          }
          tabIndex={0}
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Component API/Popover No Styles 1`] = `
<div
  className="xxx-popover"
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="xxx-popover__control"
    >
      <i
        aria-controls="fd-mocked-short-id"
        aria-expanded={false}
        aria-haspopup={true}
        className="sap-icon--cart"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="img"
        style={
          Object {
            "fontSize": "1.5rem",
          }
        }
        tabIndex={0}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Popover Out Of Boundaries 1`] = `
<button
  className="fd-button"
  onClick={[Function]}
  type="button"
>
  <span
    className="fd-button__text"
  >
    Show Dialog
  </span>
</button>
`;

exports[`Storyshots Component API/Popover Placements 1`] = `
Array [
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "
            td {
                min-width: 3em;
                min-height: 3em;
            }
            ",
      }
    }
  />,
  <table>
    <tbody>
      <tr>
        <td>
           
        </td>
      </tr>
      <tr>
        <td>
           
        </td>
      </tr>
      <tr>
        <td>
           
        </td>
      </tr>
      <tr>
        <td>
           
        </td>
      </tr>
      <tr>
        <td>
           
        </td>
      </tr>
      <tr>
        <td />
        <td />
        <td />
        <td />
        <td>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  aria-controls="fd-top-start-popover-placement-story"
                  aria-expanded={false}
                  aria-haspopup="menu"
                  className="fd-button fd-button--transparent"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="fd-button__text"
                  >
                    Top-Start
                  </span>
                  <i
                    aria-hidden={true}
                    className="sap-icon--navigation-up-arrow"
                    role="img"
                  />
                </button>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  aria-controls="fd-mocked-short-id"
                  aria-expanded={false}
                  aria-haspopup="menu"
                  className="fd-button fd-button--transparent"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="fd-button__text"
                  >
                    Top
                  </span>
                  <i
                    aria-hidden={true}
                    className="sap-icon--navigation-up-arrow"
                    role="img"
                  />
                </button>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  aria-controls="fd-mocked-short-id"
                  aria-expanded={false}
                  aria-haspopup="menu"
                  className="fd-button fd-button--transparent"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="fd-button__text"
                  >
                    Top-End
                  </span>
                  <i
                    aria-hidden={true}
                    className="sap-icon--navigation-up-arrow"
                    role="img"
                  />
                </button>
              </div>
            </div>
          </div>
        </td>
        <td />
      </tr>
      <tr>
        <td />
        <td />
        <td />
        <td>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  aria-controls="fd-mocked-short-id"
                  aria-expanded={false}
                  aria-haspopup="menu"
                  className="fd-button fd-button--transparent"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="fd-button__text"
                  >
                    Left-Start
                  </span>
                  <i
                    aria-hidden={true}
                    className="sap-icon--navigation-left-arrow"
                    role="img"
                  />
                </button>
              </div>
            </div>
          </div>
        </td>
        <td />
        <td />
        <td />
        <td>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  aria-controls="fd-mocked-short-id"
                  aria-expanded={false}
                  aria-haspopup="menu"
                  className="fd-button fd-button--transparent"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="fd-button__text"
                  >
                    Right-Top
                  </span>
                  <i
                    aria-hidden={true}
                    className="sap-icon--navigation-right-arrow"
                    role="img"
                  />
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td />
        <td />
        <td />
        <td>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  aria-controls="fd-mocked-short-id"
                  aria-expanded={false}
                  aria-haspopup="menu"
                  className="fd-button fd-button--transparent"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="fd-button__text"
                  >
                    Left
                  </span>
                  <i
                    aria-hidden={true}
                    className="sap-icon--navigation-left-arrow"
                    role="img"
                  />
                </button>
              </div>
            </div>
          </div>
        </td>
        <td />
        <td />
        <td />
        <td>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  aria-controls="fd-mocked-short-id"
                  aria-expanded={false}
                  aria-haspopup="menu"
                  className="fd-button fd-button--transparent"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="fd-button__text"
                  >
                    Right
                  </span>
                  <i
                    aria-hidden={true}
                    className="sap-icon--navigation-right-arrow"
                    role="img"
                  />
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td />
        <td />
        <td />
        <td>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  aria-controls="fd-mocked-short-id"
                  aria-expanded={false}
                  aria-haspopup="menu"
                  className="fd-button fd-button--transparent"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="fd-button__text"
                  >
                    Left-End
                  </span>
                  <i
                    aria-hidden={true}
                    className="sap-icon--navigation-left-arrow"
                    role="img"
                  />
                </button>
              </div>
            </div>
          </div>
        </td>
        <td />
        <td />
        <td />
        <td>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  aria-controls="fd-mocked-short-id"
                  aria-expanded={false}
                  aria-haspopup="menu"
                  className="fd-button fd-button--transparent"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="fd-button__text"
                  >
                    Right-End
                  </span>
                  <i
                    aria-hidden={true}
                    className="sap-icon--navigation-right-arrow"
                    role="img"
                  />
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td />
        <td />
        <td />
        <td />
        <td>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  aria-controls="fd-mocked-short-id"
                  aria-expanded={false}
                  aria-haspopup="menu"
                  className="fd-button fd-button--transparent"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="fd-button__text"
                  >
                    Bottom-Start
                  </span>
                  <i
                    aria-hidden={true}
                    className="sap-icon--navigation-down-arrow"
                    role="img"
                  />
                </button>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  aria-controls="fd-mocked-short-id"
                  aria-expanded={false}
                  aria-haspopup="menu"
                  className="fd-button fd-button--transparent"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="fd-button__text"
                  >
                    Bottom
                  </span>
                  <i
                    aria-hidden={true}
                    className="sap-icon--navigation-down-arrow"
                    role="img"
                  />
                </button>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  aria-controls="fd-mocked-short-id"
                  aria-expanded={false}
                  aria-haspopup="menu"
                  className="fd-button fd-button--transparent"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="fd-button__text"
                  >
                    Bottom-End
                  </span>
                  <i
                    aria-hidden={true}
                    className="sap-icon--navigation-down-arrow"
                    role="img"
                  />
                </button>
              </div>
            </div>
          </div>
        </td>
        <td />
      </tr>
      <tr>
        <td>
           
        </td>
      </tr>
      <tr>
        <td>
           
        </td>
      </tr>
      <tr>
        <td>
           
        </td>
      </tr>
      <tr>
        <td>
           
        </td>
      </tr>
      <tr>
        <td>
           
        </td>
      </tr>
    </tbody>
  </table>,
]
`;

exports[`Storyshots Component API/Popover Width Sizing Types 1`] = `
Array [
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <button
          aria-controls="fd-mocked-short-id"
          aria-expanded={false}
          aria-haspopup={true}
          className="fd-button"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          type="button"
        >
          <span
            className="fd-button__text"
          >
            widthSizingType: 
            <strong>
              '
              none
              '
            </strong>
          </span>
        </button>
      </div>
    </div>
  </div>,
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <button
          aria-controls="fd-mocked-short-id"
          aria-expanded={false}
          aria-haspopup={true}
          className="fd-button"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          type="button"
        >
          <span
            className="fd-button__text"
          >
            widthSizingType: 
            <strong>
              '
              matchTarget
              '
            </strong>
          </span>
        </button>
      </div>
    </div>
  </div>,
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <button
          aria-controls="fd-mocked-short-id"
          aria-expanded={false}
          aria-haspopup={true}
          className="fd-button"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          type="button"
        >
          <span
            className="fd-button__text"
          >
            widthSizingType: 
            <strong>
              '
              minTarget
              '
            </strong>
          </span>
        </button>
      </div>
    </div>
  </div>,
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <button
          aria-controls="fd-mocked-short-id"
          aria-expanded={false}
          aria-haspopup={true}
          className="fd-button"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
          type="button"
        >
          <span
            className="fd-button__text"
          >
            widthSizingType: 
            <strong>
              '
              maxTarget
              '
            </strong>
          </span>
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Component API/Popover With Custom Flip Container 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#444",
        "height": "120px",
        "width": "180px",
      }
    }
  />
  <div
    style={
      Object {
        "border": "1px solid black",
        "padding": "220px 140px 250px 40px",
      }
    }
  >
    <div
      className="fd-popover"
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <button
            aria-controls="fd-mocked-short-id"
            aria-expanded={false}
            aria-haspopup={true}
            className="fd-button fd-button--transparent"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
            type="button"
          >
            <i
              aria-hidden={true}
              className="sap-icon--navigation-up-arrow"
              role="img"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
